--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores eum molestias rem aliquid, eos labore id iure optio, sint at veritatis nam ea consectetur voluptatibus repudiandae fuga delectus distinctio.</p>
+        </div>
 </body>
 </html>
