--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores eum molestias rem aliquid, eos labore id iure optio, sint at veritatis nam ea consectetur voluptatibus repudiandae fuga delectus distinctio.</p>
         </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores eum molestias rem aliquid, eos labore id iure optio, sint at veritatis nam ea consectetur voluptatibus repudiandae fuga delectus distinctio.</p>
+        </div>
+    <div>
+        <h3>My Third Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores eum molestias rem aliquid, eos labore id iure optio, sint at veritatis nam ea consectetur voluptatibus repudiandae fuga delectus distinctio.</p>
+        </div>
 </body>
 </html>
