--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My Third Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad asperiores eum molestias rem aliquid, eos labore id iure optio, sint at veritatis nam ea consectetur voluptatibus repudiandae fuga delectus distinctio.</p>
         </div>
+        <div>
+            <h3>How to push incremental code</h3>
+            <ul>
+                <li>git add .</li>
+                <li>git commit -m"a meaningful commit message"</li>
+                <li>git push</li>
+            </ul>
+        </div>
 </body>
 </html>
